--- a/index.css
+++ b/index.css
@@ -7,15 +7,21 @@
     text-align:center;
 }
 
+.hor_corr{
+   margin-left:-30px;
+   margin-top:-10px;
+}
+ 
 
-a{
+
+li a{
     text-decoration: none;
     font-family: 'Segoe UI';
 }
 
   
   /* visited link */
-  a,a:link,a:visited,a:active {
+  li a,li a:link,li a:visited,li a:active {
     color: #258e8e
   }
   
