--- a/index.css
+++ b/index.css
@@ -25,7 +25,19 @@ li a{
     color: #258e8e
   }
   
-  
+  .footer { 
+    position: absolute; 
+    bottom: 0; 
+    left: 0; 
+    z-index: 10;
+}
+
+.list_style
+{
+   list-style-type: none;
+}
+
+
 
 /* .container {
     overflow-x: auto;
