--- a/products.css
+++ b/products.css
@@ -26,6 +26,18 @@ li a{
 
   
   /* visited link */
-  li a,li a:link,li a:visited,li a:active {
+li a,li a:link,li a:visited,li a:active {
     color: #258e8e
-  }
+}
+
+/* .footer { 
+    position: absolute; 
+    bottom: 0; 
+    left: 0; 
+    z-index: 10;
+} */
+
+.list_style
+{
+   list-style-type: none;
+}
