--- a/contacts.css
+++ b/contacts.css
@@ -12,8 +12,8 @@ body{
   }
   
   .hor_corr{
-     margin-left:-30px;
-     margin-top:-10px;
+     margin-left:-15px;
+    /* margin-top:-10px; */
   }
    
   
@@ -21,20 +21,28 @@ body{
   li a{
       text-decoration: none;
       font-family: 'Segoe UI';
+      font-size: 16px;
   }
   
     
     /* visited link */
-    li a,li a:link,li a:visited,li a:active {
+li a,li a:link,li a:visited,li a:active 
+{
       color: #258e8e
-    }
-    
-    .footer { 
-      position: absolute; 
-      bottom: 0; 
-      left: 0; 
-      z-index: 10;
-  }
+}
+
+#wrapper {
+    height: 500px;        /* This wrapper sets the height for the page*/
+    position: relative;
+}
+
+.footer { 
+    position: absolute; 
+    bottom: 0; 
+    left: 0; 
+    z-index: 10;
+}
+  
   
   .list_style
   {
