--- a/products.css
+++ b/products.css
@@ -13,8 +13,8 @@ body{
 }
 
 .hor_corr{
-   margin-left:-23px;
-   margin-top:-10px;
+   /* margin-left:-24px;
+   margin-top:-10px; */
 }
  
 
@@ -22,6 +22,7 @@ body{
 li a{
     text-decoration: none;
     font-family: 'Segoe UI';
+    font-size: 16px;
 }
 
   
