--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ body{
 
 #wrapper {
   height: 500px;        /* This wrapper sets the height for the page*/
-  position: relative;
+  position: relative; 
 }
 
 
@@ -37,6 +37,23 @@ li a,li a:link,li a:visited,li a:active {
     color: #258e8e
 }
   
+.cont {                    /*write text on banner*/
+  position: relative; 
+  text-align: center;
+  color: white;
+}
+
+
+.centered {            /*write text on banner*/
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+
+
 .footer { 
     position: absolute; 
     bottom: 0; 
