fixed clickable logo,link goes to home page

--- a/about.css
+++ b/about.css
@@ -1,5 +1,6 @@
 body{
-    font-family:'Segoe UI', Arial,Tahoma;
+    /* font-family:'Segoe UI', Arial,Tahoma; */
+    font-family:Georgia, Arial,Tahoma;
   }
 
 .horizontal{
