--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body{
-    font-family:'Segoe UI', Arial,Tahoma;
+    /* font-family:'Segoe UI', Arial,Tahoma; */
+    font-family:Georgia,Arial,Tahoma;
     /* height:100%; */
 }
 
@@ -14,7 +15,7 @@ body{
 }
 
 .hor_corr{
-    margin-left:-20px;
+    margin-left:-19px;
    /*margin-top:-10px; */
 }
  
