Added new text to philosophy on about-page and changed contacts to contact in nav.

--- a/about.css
+++ b/about.css
@@ -29,7 +29,7 @@ body{
   /* height:50%; */
   background:rgba(233, 202, 233, 0.753);
   position:absolute;
-  text-align:center;
+  /* text-align:center; */
   margin-bottom:30px;
 }
 
