--- a/index.css
+++ b/index.css
@@ -24,8 +24,41 @@ body{
 }
 
 #wrapper {
-  height: 500px;        /* This wrapper sets the height for the page*/
+  height: 600px;        /* This wrapper sets the height for the page, used to control footer*/
   position: relative; 
+}
+
+.feature_home{
+  left:25%;
+  width:50%;
+  /* height:50%; */
+  /* background:rgba(233, 202, 233, 0.753); */
+  background: white;
+  position:absolute;
+  padding:15px;
+  /* text-align:center; */
+  margin-bottom:30px;
+}
+
+p::first-letter {
+  font-size: 150%;
+}
+
+
+@media only screen and (min-width: 520px) 
+{
+  #wrapper {
+    height: 500px;        /* This wrapper sets the height for the page, used to control footer*/
+    position: relative; 
+  }
+}
+
+@media only screen and (min-width: 768px) 
+{
+  #wrapper {
+    height: 450px;        /* This wrapper sets the height for the page, used to control footer*/
+    position: relative; 
+  }
 }
 
 
@@ -36,9 +69,8 @@ li a{
 }
 
   
-  /* visited link */
 li a,li a:link,li a:visited,li a:active {
-    color: #258e8e
+    color: #258e8e;
 }
   
 .cont {                    /*write text on banner*/
