--- a/contacts.css
+++ b/contacts.css
@@ -33,7 +33,7 @@ li a,li a:link,li a:visited,li a:active
 }
 
 #wrapper {
-    height: 500px;        /* This wrapper sets the height for the page*/
+    height: 350px;        /* This wrapper sets the height for the page*/
     position: relative;
 }
 
@@ -44,11 +44,33 @@ li a,li a:link,li a:visited,li a:active
     z-index: 10;
 }
   
-  
-  .list_style
-  {
-     list-style-type: none;
+.feature_contact{
+    margin-top:50px;
+    left:25%;
+    width:50%;
+    /* height:50%; */
+    background:rgba(138, 136, 138, 0.082);
+    position:relative;
+    /* text-align:center; */
+    margin-bottom:30px;
   }
+
+.feature_adress{
+    margin-top:50px;
+    left:25%;
+    width:50%;
+    /* height:50%; */
+    background:rgba(138, 136, 138, 0.082);
+    position:relative;
+    /* text-align:center; */
+    margin-bottom:30px;
+}
+
+
+.list_style
+{
+     list-style-type: none;
+}
   
   
   
