--- a/index.css
+++ b/index.css
@@ -81,7 +81,7 @@ p::first-letter {
 
 li a{
     text-decoration: none;
-    font-family: 'Segoe UI';
+    font-family: 'Segoe UI','Noto Sans';
     font-size: 16px;
 }
 
